--- a/dev_config.toml
+++ b/dev_config.toml
@@ -1,3 +1,6 @@
+[general]
+dev = true
+
 [github]
 # Register the app here: https://github.com/settings/applications/new
 # Use a callback URL like `http://localhost:8000/auth/github/authorize`
